Add creator name 'Rahul' with cool gradient animation and glow effects

--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
           </div>
         </div>
 
+        <div class="creator-name">
+          <span class="name-text">Rahul</span>
+        </div>
         <h2 class="modal-title">TimeZoneBuddy Creator</h2>
         <p class="modal-subtitle">Full-Stack Developer & Time Zone Enthusiast</p>
 
