--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
         </div>
 
         <div class="nav-actions">
+          <button class="nav-item" id="dashboardBtn">
+            <span class="nav-item-icon">📊</span>
+            <span class="nav-item-text">Dashboard</span>
+          </button>
           <button class="theme-toggle" id="themeToggle" title="Toggle Theme (T)">
             <span class="theme-icon">🌙</span>
           </button>
@@ -107,6 +111,10 @@
           <span class="name-text">Rahul</span>
         </div>
 
+        <div class="user-location" id="userLocation"
+          style="text-align:center;margin-bottom:1rem;font-size:1.1rem;color:var(--accent-color);font-weight:600;">
+        </div>
+
         <h2 class="modal-title">TimeZoneBuddy Creator</h2>
         <p class="modal-subtitle">Full-Stack Developer & Time Zone Enthusiast</p>
 
@@ -167,6 +175,69 @@
         </div>
 
         <button class="btn btn-primary btn-full" id="closeModal">Close</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Name Input Modal -->
+  <div class="modal-overlay" id="nameModal">
+    <div class="modal">
+      <div class="modal-content">
+        <h2 class="modal-title">Welcome to TimeZoneBuddy!</h2>
+        <p class="modal-subtitle">Please enter your name to continue</p>
+
+        <div class="name-input-container">
+          <input type="text" id="userNameInput" placeholder="Enter your name..." class="name-input">
+          <button class="btn btn-primary" id="submitNameBtn">Continue</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Dashboard Modal -->
+  <div class="modal-overlay" id="dashboardModal">
+    <div class="modal">
+      <div class="modal-content">
+        <h2 class="modal-title">User Interaction Dashboard</h2>
+
+        <div class="dashboard-grid">
+          <div class="dashboard-card">
+            <h3>Current User</h3>
+            <p id="currentUserName">Unknown</p>
+          </div>
+
+          <div class="dashboard-card">
+            <h3>Total Visitors</h3>
+            <p id="totalVisitors">0</p>
+          </div>
+
+          <div class="dashboard-card">
+            <h3>Session Time</h3>
+            <p id="sessionTime">0 minutes</p>
+          </div>
+
+          <div class="dashboard-card">
+            <h3>Cities Added</h3>
+            <p id="citiesCount">0</p>
+          </div>
+
+          <div class="dashboard-card">
+            <h3>Theme Toggles</h3>
+            <p id="themeToggles">0</p>
+          </div>
+        </div>
+
+        <div class="visitors-section">
+          <h3>All Visitors</h3>
+          <div id="visitorsList" class="visitors-list"></div>
+        </div>
+
+        <div class="user-activity">
+          <h3>Recent Activity</h3>
+          <div id="activityLog" class="activity-log"></div>
+        </div>
+
+        <button class="btn btn-primary btn-full" id="closeDashboard">Close Dashboard</button>
       </div>
     </div>
   </div>
